--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,43 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="flex justify-center mt-8 bg-[url(./background.jpg)] bg-no-repeat bg-cover bg-right bg-opacity-25 z-0">
- 
-   <main class="w-max h-max z-10 mt-9">
-    <div>
-      <h2 class="text-[28px] text-white font-semibold flex justify-center mt-9">UBA <img src="" alt="" /></h2>
-     <h3 class="text-white flex justify-center">United Bank for Africa.</h3> 
+<body class=" m-0 p-0 bg-[url(./background.jpg)] bg-no-repeat bg-center bg-cover bg-opacity-35 h-[100vh] z-0">
+  <header>
+ <div class="grid grid-cols-[1fr_1fr]">
+      <div class="flex">
+      <span class="h-8">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-9 text-white">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+</svg>
+
+      </span>
+      <button>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-9 text-white font-bold">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+</svg>
+
+      </button>
+      </div>
+       <div class="flex justify-end gap-1">
+      <button>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-9 text-white">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z" />
+  <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z" />
+</svg>
+
+      </button>
+      <button>
+       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-9 text-white">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 12.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 18.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5Z" />
+</svg>
+
+      </button>
+      </div>
+    </div>
+  </header>
+   <main class=" mt-[10rem] z-100">
+      <h2 class="text-[50px] text-white font-[5rem] text-6xl tracking-wider flex justify-center italic">UBA <img class="w-[3.5rem] h-[3.4rem]" src="./ubalogo-removebg-preview.png" alt="" /></h2>
+     <h3 class="text-white flex justify-center font-bold -tracking-tighter ">United Bank for Africa.</h3> 
 
       <h5 class="text-white flex justify-center text-[9px] mt-4">licensed by the central Bank of Nigeria</h5>
     </div>
@@ -27,11 +58,18 @@
      </div>
      
     </div>
-    <div class="flex justify-center">
-       <button class="w-[15rem] h-auto bg-red-500 text-white p-2 flex items-center justify-center">Sign in</button>
+    <div class="flex justify-center h-[100px]">
+       <button class="w-[15rem] h-[50px] bg-red-500 text-white p-1 flex items-center justify-center rounded-[6px]">Sign in</button>
     </div> 
+    <div class="grid grid-cols-[1fr_60px] h-[24vh] items-end">
+      <div>
+        <li class="text-white list-none ml-4 font-bold">Open an Account</li>
+      </div>
+      <div>
+        <li class="text-white list-none font-bold">Sign up</li>
+      </div>
+    </div>
   </main>
     <script type="module" src="main.js"></script>
 </body>
-
 </html>
