--- a/src/index.html
+++ b/src/index.html
@@ -5,71 +5,130 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>UBA Clone</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class=" m-0 p-0 bg-[url(./background.jpg)] bg-no-repeat bg-center bg-cover bg-opacity-35 h-[100vh] z-0">
-  <header>
- <div class="grid grid-cols-[1fr_1fr]">
+<body class=" m-0 p-0 bg-[url(./background.jpg)] bg-no-repeat bg-center bg-cover bg-opacity-35 h-[100vh] z-0 bg-fixed scroll-smooth">
+
+  <header id="main">
+    <div class="grid grid-cols-[1fr_1fr] mt-3">
       <div class="flex">
-      <span class="h-8">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-9 text-white">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-</svg>
+        <span class="h-8" id="country">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-7 h-9 text-white">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+          </svg>
 
-      </span>
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-9 text-white font-bold">
-  <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-</svg>
+        </span>
 
-      </button>
+        <span id="open-country">
+
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-9 text-white font-bold">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+          </svg>
+        </span>
+        <ul id="countrys" class="bg-white w-max h-[300px] overflow-scroll absolute top-8 hidden box">
+
+        </ul>
       </div>
-       <div class="flex justify-end gap-1">
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-9 text-white">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z" />
-  <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z" />
-</svg>
+      <div class="flex justify-end gap-1">
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-7 h-9 text-white">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M6.827 6.175A2.31 2.31 0 0 1 5.186 7.23c-.38.054-.757.112-1.134.175C2.999 7.58 2.25 8.507 2.25 9.574V18a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9.574c0-1.067-.75-1.994-1.802-2.169a47.865 47.865 0 0 0-1.134-.175 2.31 2.31 0 0 1-1.64-1.055l-.822-1.316a2.192 2.192 0 0 0-1.736-1.039 48.774 48.774 0 0 0-5.232 0 2.192 2.192 0 0 0-1.736 1.039l-.821 1.316Z" />
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M16.5 12.75a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0ZM18.75 10.5h.008v.008h-.008V10.5Z" />
+          </svg>
 
-      </button>
-      <button>
-       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-9 text-white">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 12.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 18.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5Z" />
-</svg>
+        </button>
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-8 h-9 text-white">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M12 6.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 12.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 18.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5Z" />
+          </svg>
 
-      </button>
+        </button>
       </div>
     </div>
   </header>
-   <main class=" mt-[10rem] z-100">
-      <h2 class="text-[50px] text-white font-[5rem] text-6xl tracking-wider flex justify-center italic">UBA <img class="w-[3.5rem] h-[3.4rem]" src="./ubalogo-removebg-preview.png" alt="" /></h2>
-     <h3 class="text-white flex justify-center font-bold -tracking-tighter ">United Bank for Africa.</h3> 
-
+  <main class=" mt-[10rem] z-100 bg-fixed">
+    <div id="front-page">
+      <h2 class="text-[50px] text-white font-[5rem] text-6xl tracking-wider flex justify-center italic">UBA <img
+          class="w-[3.5rem] h-[3.4rem]" src="./ubalogo-removebg-preview.png" alt="" /></h2>
+      <h3 class="text-white flex justify-center font-bold -tracking-tighter">United Bank for Africa.</h3>
+  
       <h5 class="text-white flex justify-center text-[9px] mt-4">licensed by the central Bank of Nigeria</h5>
-    </div>
-    <div class="w-auto h-[200px] flex">
-      <div class="text-white w-[38rem] h-[12rem]">
-        <div class="flex justify-center mt-8">
-          <img src="./document.png" alt="" class="w-[40px] h-[40px] bg-white rounded-3xl">
+      </div>
+      <div class="w-auto h-[200px] flex">
+        <div class="text-white w-[38rem] h-[12rem]">
+          <div class="flex justify-center mt-8">
+            <img src="./document.png" alt="" class="w-[40px] h-[40px] bg-white rounded-3xl">
+          </div>
+          <h3 class="flex justify-center text-center items-end">Top-up</h3>
         </div>
-       <h3 class="flex justify-center text-center items-end">Top-up</h3>
-     </div>
-     
     </div>
+
+    </div>
+    <div class="bg-white h-[73vh] w-[88vw] absolute top-[12vh] left-[6vw] rounded-3xl hidden" id="open-account">
+      <div class="w-[100%] flex justify-end mt-4">
+        <button class="mr-3" id="close-msg">✖</button>
+      </div>
+      <h3 class=" h-[59px] flex justify-center items-end text-[22px] font-bold">Privacy Notice</h3>
+      <p class="ml-5 mr-4 mt-8"> we take your privacy seriously and only process your personal information to make your
+        banking experience better.
+        please read our privacy policy at <span>www.ubagroup.com/privacy-policy</span> before proceeeding to use this
+        platform. in accordance with NDPR,GDPR, and other applicable regulations, continuing to use this platform
+        indicates your consent to the collection and processing of your personal data by United Bank for Africa PLC, its
+        subsidiaries and partners, as detailed in the privacy Policy.
+      </p>
+      <div class="flex justify-center bg-red-600 w-[300px] ml-9 p-3 rounded-md mt-7">
+        <button class="text-white">Accept</button>
+      </div>
+      <div class="flex justify-center w-[300px] ml-9 p-3 border-solid border-red-500 border-2 mt-3 rounded-md">
+        <button class="text-red-500">Reject</button>
+      </div>
+    </div>
+ <article class="h-[22rem] absolute bg-black w-[100vw] hidden" id="show-signIn">
+      <form action="" method="get" class="grid gap-4 text-white">
+        <header class="grid grid-cols-[1fr_1fr] text-white">
+          <p class="font-medium text-2xl">Sign in</p>
+          <div class="flex justify-end mr-3 cursor-pointer" id="close-signIn"> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-8 h-9 text-white font-bold bg-red-500 rounded-[30px] mt-1">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+          </svg> </div>
+        </header>
+        <label for="telephone"></label>
+        <input type="tel" name="phone" id="phone" readonly value="+2348124352634" autocomplete="tel-country-code"  class="w-[90vw] ml-4 p-2.5 bg-black border-solid border-gray-300 border-2 rounded-lg">
+        <label for="password"></label>
+        <input type="password" name="password" id="password" autocomplete="current-password" placeholder="password" required class="w-[90vw] ml-4 p-2.5 bg-black border-solid border-gray-300 border-2 rounded-lg pswd">
+        <p class="mt-[-12px] ml-5 text-red-400 font-thin italic" id="error"></p>
+        <div class="w-[100vw] text-white mt-4 flex justify-end">forgot password?</div>
+        <div class="flex justify-center">
+        <button class="bg-red-500 w-[60vw] p-3 text-white" id="sign-up">Sign in</button> <span class="h-3">🎥</span>
+        </div>
+      </form>
+    </article>
+
     <div class="flex justify-center h-[100px]">
-       <button class="w-[15rem] h-[50px] bg-red-500 text-white p-1 flex items-center justify-center rounded-[6px]">Sign in</button>
-    </div> 
+      <button class="w-[15rem] h-[50px] bg-red-400 text-white p-1 flex items-center justify-center rounded-[6px]" id="show-signInBtn">Sign
+        in</button>
+    </div>
     <div class="grid grid-cols-[1fr_60px] h-[24vh] items-end">
       <div>
-        <li class="text-white list-none ml-4 font-bold">Open an Account</li>
+        <button class="text-white list-none ml-4 font-bold" id="open-msg">Open an Account</button>
       </div>
       <div>
-        <li class="text-white list-none font-bold">Sign up</li>
+        <button class="text-white list-none font-bold" id="criteria">Sign up</button>
       </div>
     </div>
+
   </main>
-    <script type="module" src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
+
 </html>
