load username to page

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
         <label for="telephone"></label>
         <input type="tel" name="phone" id="phone" readonly value="+2348124352634" autocomplete="tel-country-code"  class="w-[90vw] ml-4 p-2.5 bg-black border-solid border-gray-300 border-2 rounded-lg">
         <label for="password"></label>
-        <input type="password" name="password" id="password" autocomplete="current-password" placeholder="password" required class="w-[90vw] ml-4 p-2.5 bg-black border-solid border-gray-300 border-2 rounded-lg pswd">
+        <input type="password" name="password" id="password" autocomplete="current-password" placeholder="password" required class="w-[90vw] ml-4 p-2.5 bg-black border-solid border-gray-300 border-2 rounded-lg pswd values">
         <p class="mt-[-12px] ml-5 text-red-400 font-thin italic" id="error"></p>
         <div class="w-[100vw] text-white mt-4 flex justify-end">forgot password?</div>
         <div class="flex justify-center">
@@ -118,7 +118,7 @@
       <button class="w-[15rem] h-[50px] bg-red-400 text-white p-1 flex items-center justify-center rounded-[6px]" id="show-signInBtn">Sign
         in</button>
     </div>
-    <div class="grid grid-cols-[1fr_60px] h-[24vh] items-end">
+    <div class="grid grid-cols-[1fr_60px] h-[27vh] items-end">
       <div>
         <button class="text-white list-none ml-4 font-bold" id="open-msg">Open an Account</button>
       </div>
