wrapping up and uploading to github

--- a/src/signUp.html
+++ b/src/signUp.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <main>
-        <header class="grid grid-cols-[1fr_1fr] bg-white shadow-md p-3">
-            <div class="flex items-start align-top">
+    <main  class="overflow-hidden">
+        <header class="grid grid-cols-[1fr_1fr] bg-white shadow-md p-3 lg:p-8">
+            <div class="flex items-start align-top ">
                 <span><svg id="beck-btn" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-5">
+                        stroke="currentColor" class="w-6 h-5 lg:h-9 lg:w-9">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
                     </svg>
                 </span>
-                <span class="ml-6 font-bold text-xl mt-[-4px]">Sign up</span>
+                <span class="ml-6 font-bold text-xl mt-[-4px] lg:text-3xl">Sign up</span>
             </div>
             <div class="flex justify-end mr-4">
                 <span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-6">
+                        stroke="currentColor" class="w-6 h-6 lg:h-9 lg:w-9">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
                     </svg>
@@ -31,35 +31,35 @@
             </div>
         </header>
         <div class="grid grid-cols-[1fr_1fr]">
-            <p class="text-[11px] opacity-1 font-extralight">You are signing up with your account in</p>
-            <span class="flex justify-end">Nigeria____</span>
+            <p class="text-[11px] opacity-1 font-extralight lg:text-2xl lg:font-normal">You are signing up with your account in</p>
+            <span class="flex justify-end lg:text-2xl">Nigeria____</span>
         </div>
-        <ul class="grid gap-4 mt-4 bg-white grid-cols-2 grid-rows-3">
-            <li class="w-[100vh] grid grid-cols-[1fr_20px]">Use Activation Code</li>
+        <ul class="grid gap-4 mt-4 bg-white grid-cols-2 grid-rows-3 lg:gap-9">
+            <li class="w-[100vh] grid grid-cols-[1fr_20px] lg:text-3xl lg:mt-4  ">Use Activation Code</li>
             <span class="flex justify-end">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-5 text-gray-700">
+                    stroke="currentColor" class="w-6 h-5 text-gray-700 lg:w-9 lg:h-9">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                 </svg>
             </span>
-            <li class="w-[100vh] grid grid-cols-[1fr_20px]">Debit Card</li>
+            <li class="w-[100vh] grid grid-cols-[1fr_20px] lg:text-3xl ">Debit Card</li>
             <span class="flex justify-end">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-5 text-gray-700">
+                    stroke="currentColor" class="w-6 h-5 text-gray-700 lg:w-9 lg:h-9">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                 </svg>
             </span>
-            <li class="w-[100vh] grid grid-cols-[1fr_20px]">Prepaid Card</li>
+            <li class="w-[100vh] grid grid-cols-[1fr_20px] lg:text-3xl">Prepaid Card</li>
             <span class="flex justify-end">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-5 text-gray-700">
+                    stroke="currentColor" class="w-6 h-5 text-gray-700 lg:w-9 lg:h-9">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                 </svg>
             </span>
-            <li class="w-[100vh] grid grid-cols-[1fr_20px]">Registered in Branch</li>
+            <li class="w-[100vh] grid grid-cols-[1fr_20px] lg:text-3xl ">Registered in Branch</li>
             <span class="flex justify-end">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-6 h-5 text-gray-700">
+                    stroke="currentColor" class="w-6 h-5 text-gray-700 lg:w-9 lg:h-9">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                 </svg>
             </span>
